Andmete sisestamise vorm ühendatud PHP failiga

--- a/form/vorm.html
+++ b/form/vorm.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <h2>Info sisestamise lahtird</h2>
-<form>
-    Loom <input type="text"><br>
-    Lind <input type="text"><br>
-    Kala <input type="text"><br>
+<form action="tellimine.php" method="get">
+    Loom <input type="text" name="loom"><br>
+    Lind <input type="text" name="lind"><br>
+    Kala <input type="text" name="Kala"><br>
     <input type="submit" value="Saada">
 
 </form>
