--- a/form/vorm.html
+++ b/form/vorm.html
@@ -9,7 +9,7 @@
 <form action="tellimine.php" method="get">
     Loom <input type="text" name="loom"><br>
     Lind <input type="text" name="lind"><br>
-    Kala <input type="text" name="Kala"><br>
+    Kala <input type="text" name="kala"><br>
     <input type="submit" value="Saada">
 
 </form>
