--- a/form/vorm.html
+++ b/form/vorm.html
@@ -10,9 +10,19 @@
     Loom <input type="text" name="loom"><br>
     Lind <input type="text" name="lind"><br>
     Kala <input type="text" name="kala"><br>
+
+
+<h2> Geomeetrilised kujundid</h2>
+<p> Sisesta vajalikud mõõtmed</p>
+
+
+    <h3>Mõõtmed</h3>
+    <label for="raadius">Raadius(cm)</label>
+    <input id="raadius" name="raadius" type="number" step="0.1" min="0">
+    <br>
+    <label for="korgus">Kõrgus(cm)</label>
+    <input id="korgus" name="korgus" type="number" step="0.1" min="0">
     <input type="submit" value="Saada">
-
 </form>
-
 </body>
 </html>
