--- a/session/html/login.html
+++ b/session/html/login.html
@@ -5,7 +5,7 @@
     <title>Login</title>
 </head>
 <body>
-<form>
+<form action="../acts/login.php" method="get">
     <p>
         <label> Kasutajanimi: </label>
         <input type="text" name="uname">
